@@ -1,21 +1,22 @@
 package CustomerServer.config;
 
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
-
 @Configuration
 public class CorsConfig {
-
   @Bean
   CorsFilter corsFilter() {
     CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(Arrays.asList(
-        "http://localhost:3001", "http://localhost:5049"));
+    // config.setAllowedOrigins(Arrays.asList("http://localhost:3001",
+    // "http://localhost:3002", "http://localhost:5049"));
+    config.setAllowedOriginPatterns(List.of("*"));
     config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
     config.setAllowedHeaders(Arrays.asList("*"));
     config.setAllowCredentials(true);
